# lingtai

./: .gitignore  CLAUDE.md  Makefile  README.md  README.wen.md  README.zh.md  RELEASING.md  config.example.json  go.mod  install.sh  lingtai-projects  main.go  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  __main__.py  cli.py  config.py  setup.py  test_app_cli.py  test_app_config.py  test_app_launch.py
app/email/: __main__.py  config.example copy.json  config.example.json
app/orchestration/: go.mod  main.go
app/web/: config.example.json  run.py  start.sh
assets/braille/: 22610_w29_tui.txt  22610_w44.txt  22610_w66.txt
daemon/: covenant_en.md  covenant_zh.md  go.mod  main.go
docs/: design.md  discussion-log.md  example-role.md  i18n-vocab.md  known-limitations.md  status.md  tool-descriptions.md  三魂七魄.md
docs/blog/: 2026-04-09-lingtai-agora.md  2026-04-10-launch-recipes.md  2026-04-14-four-layers-of-memory.md
docs/daily/: 2026-04-05.md  2026-04-06.md
docs/specs/: 2026-03-15-api-gate-plan.md  2026-03-15-llm-api-call-queue-design.md  2026-03-15-logging-service-design.md  2026-03-15-logging-service-plan.md  2026-03-17-mcp-client-extraction-design.md  2026-03-22-agent-isolation-design.md
examples/: bash_policy.json  chat_agent.py  chat_minimax_simple.py  chat_web.py  contemplate.py  imap.jsonc  init.jsonc  telegram.jsonc  three_agents.py  two_agents.py
portal/: Makefile  embed.go  go.mod  main.go
scripts/: dump_tool_descriptions.py  img2blocks.py  img2braille.py  rename.py  telegram_chat.py
tests/: integration_test_compaction.py  manual_test_cancel.py  test_adapter_registry.py  test_addon_gmail_manager.py  test_addon_gmail_service.py  test_addon_imap_account.py  test_addon_imap_manager.py  test_addon_imap_service.py  test_addon_telegram_account.py  test_addon_telegram_manager.py  test_addon_telegram_service.py  test_addons.py  test_agent.py  test_agent_capabilities.py  test_anima.py  test_api_gate.py  test_app_config.py  test_app_launch.py  test_cancel_email.py  test_cli.py  test_cli_integration.py  test_clock.py  test_compaction.py  test_conscience.py  test_daemon.py  test_deep_refresh.py  test_eigen.py  test_git_init.py  test_i18n.py  test_init_schema.py  test_intrinsics_comm.py  test_intrinsics_file.py  test_karma.py  test_layers.py  test_layers_avatar.py  test_layers_bash.py  test_layers_compose.py  test_layers_delegate.py  test_layers_draw.py  test_layers_email.py  (+33 more)
tui/: .gitignore  Makefile  go.mod  go.sum  list_unix.go  list_windows.go  main.go  purge_unix.go  purge_windows.go  suspend_unix.go  suspend_windows.go
tui/i18n/: en.json  (+3 more)
tui/internal/preset/addons/imap/: SETUP.md  pyproject.toml
tui/internal/preset/addons/imap/src/lingtai_imap/: __init__.py
(+537 files in other folders)
