[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai"
version = "0.1.0"
description = "Generic research agent with intrinsic tools and MCP-compatible extension interface"
requires-python = ">=3.11"
dependencies = ["lingtai-kernel"]

[project.scripts]
lingtai = "lingtai.cli:main"

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
minimax = ["anthropic>=0.40", "mcp>=1.0"]
duckduckgo = ["ddgs>=7.0"]
trafilatura = ["trafilatura>=2.0"]
telegram = ["httpx>=0.27"]
all = ["lingtai[gemini,openai,anthropic,minimax,duckduckgo,trafilatura,telegram]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
