[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lingtai-imap"
version = "0.1.0"
description = "IMAP email addon for LingTai AI agents"
requires-python = ">=3.11"
dependencies = [
    "lingtai>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]
